# bun-rs

./: .gitignore  3  4  CHANGELOG.md  Cargo.toml  README.md  atomic.txt  broken-link  capture.txt  file with spaces.txt  large.txt  myfile.txt  output.txt  pwd_output.txt  robust.txt  rust-toolchain.toml  script.bun.sh  sync_write.txt  temp_script.ts
.github/workflows/: ci.yml
crates/bun-bundler/: Cargo.toml
crates/bun-bundler/src/: lib.rs
crates/bun-cli/: Cargo.toml
crates/bun-cli/src/: main.rs
crates/bun-cli/tests/: e2e.rs
crates/bun-install/: Cargo.toml
crates/bun-install/src/: lib.rs
crates/bun-jsc/: Cargo.toml
crates/bun-jsc-sys/: Cargo.toml  build.rs
crates/bun-jsc-sys/src/: lib.rs
crates/bun-jsc/src/: callback.rs  exception.rs  lib.rs  object.rs  string.rs  value.rs
crates/bun-loader/: Cargo.toml
crates/bun-loader/examples/: probe.rs
crates/bun-loader/src/: lib.rs  resolver.rs  rewriter.rs
crates/bun-runtime/: Cargo.toml
crates/bun-runtime/src/: async_rt.rs  babel_helpers.rs  buffer.rs  console.rs  lib.rs  modules.rs  process_global.rs  repl.rs  sourcemap.rs  test_runner.rs  timers.rs
crates/bun-runtime/src/bun_api/: ffi.rs  file.rs  mod.rs  serve.rs  sqlite.rs  test_harness.rs  test_module.rs
crates/bun-runtime/src/node_builtins/: assert.rs  buffer.rs  child_process.rs  crypto.rs  events.rs  fs.rs  http.rs  mod.rs  os.rs  path.rs  querystring.rs  readline.rs  stream.rs  url.rs  util.rs  zlib.rs
crates/bun-runtime/src/web/: fetch.rs  mod.rs  polyfill.js  streams.js  url_parse.rs  websocket.rs  worker.rs
crates/bun-transpile/: Cargo.toml
crates/bun-transpile/src/: lib.rs
docs/: build.md  capabilities.md  esm.md  guide.md  plan.md  roadmap.md  tutorial.md
examples/: README.md  hello.ts
examples/chat/: chat.ts
examples/dedupe/: dedupe.ts  worker.ts
examples/shortener/: server.ts
lmao3/: lmao.txt
scripts/: run-bun-suite.sh
