[package]
name = "bun-install"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Minimal npm package installer (reads package.json, fetches from registry, extracts tarballs to node_modules)."

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = "1"
ureq = { version = "3", default-features = false, features = ["rustls", "json"] }
flate2 = "1"
tar = "0.4"
