[package]
name = "bun-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JS event loop, module loader, and built-in globals for bun-rs."

[dependencies]
bun-jsc = { workspace = true }
bun-jsc-sys = { workspace = true }
bun-transpile = { workspace = true }
bun-loader = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ureq = { version = "3", default-features = false, features = ["rustls", "json"] }
url = "2"
serde_json = "1"
tiny_http = "0.12"
