[package]
name = "bun-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JS event loop, module loader, and built-in globals for bun-rs."

[dependencies]
bun-jsc = { workspace = true }
bun-jsc-sys = { workspace = true }
bun-transpile = { workspace = true }
bun-loader = { workspace = true }
bun-bundler = { workspace = true }
bun-install = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ureq = { version = "3", default-features = false, features = ["rustls", "json"] }
url = "2"
serde_json = "1"
tiny_http = "0.12"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-graceful"] }
http-body-util = "0.1"
bytes = "1"
tokio-tungstenite = { version = "0.27", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
libloading = "0.8"
libffi = "5"
flate2 = "1"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
digest = "0.10"
rand = "0.9"
uuid = { version = "1", features = ["v4"] }
subtle = "2"
